--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Profile/ChangePassword.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Profile/ChangePassword.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-       <br />
+        <br />
     </div>
     <!-- /.col-lg-12 -->
 </div>
@@ -15,69 +15,85 @@
 @using (Html.BeginForm("ChangePassword", "Profile", FormMethod.Post, new { @id = "form1" }))
 {
 
-   <span style="color:red"> @TempData["ChangePassword"]</span>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Change Password
-                </div>
-                <div class="panel-body">
 
-                    <fieldset>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Password Type <span style="color:red">*</span></label>
-                                    @Html.DropDownListFor(m => m.PasswordType, new SelectList(ViewBag.ddlPasswordType, "Value", "Text"), new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.PasswordType)
+    <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Change Password</span>
+                                        </a>
+                                    </li>
+
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Password Type <span style="color:red">*</span></label>
+                                                    @Html.DropDownListFor(m => m.PasswordType, new SelectList(ViewBag.ddlPasswordType, "Value", "Text"), new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.PasswordType)
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Old Password <span style="color:red">*</span></label>
+                                                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.OldPassword)
+                                                    @*<input type ="text" id="txtLastName" value="@item1.LastName" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>New Password <span style="color:red">*</span></label>
+                                                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.NewPassword)
+                                                    @*<input type ="text" id="txtMobile"  value="@item1.Mobile" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <br />
+                                                    <input type="submit" id="btnUpdate" class="btn btn-success pull-left" name="btnUpdate" value="Update" onclick="return validate();" />
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
                                 </div>
                             </div>
-                             <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Old Password <span style="color:red">*</span></label>
-                                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.OldPassword)
-                                    @*<input type ="text" id="txtLastName" value="@item1.LastName" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-
                         </div>
-                       
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>New Password <span style="color:red">*</span></label>
-                                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.NewPassword)
-                                    @*<input type ="text" id="txtMobile"  value="@item1.Mobile" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                               <div class="col-lg-6">
-                                <div class="form-group">
-                                    <br />
-                                    <input type="submit" id="btnUpdate" class="btn btn-success pull-right" name="btnUpdate" value="Update" onclick="return validate();" />
-                                </div>
-                            </div>
-                        </div>
-
-                     
-                    </fieldset>
-
-                </div>
+                    </div>
+                </section>
             </div>
         </div>
     </div>
-         
+
 }
 <style>
-       
-        .errortext
-        {
-            border: 1px solid red !important;
-            background-color: #fff0f0 !important;
-        }
-    </style>
+    .errortext {
+        border: 1px solid red !important;
+        background-color: #fff0f0 !important;
+    }
+</style>
 <script>
     function validate() {
         $(".errortext").removeClass("errortext");
@@ -96,7 +112,7 @@
             $('#NewPassword').focus();
             return false;
         }
-        
+
         return true;
     }
 </script>
