--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -166,7 +166,7 @@
                         <div class="card-content">
                            
                             <div class="table-responsive">
-                                <table class="table mb-0">
+                                <table class="table mb-0" id="example23">
                                     <thead class="thead-dark">
                                         <tr>
                                             <th>Sr No.</th>
@@ -213,7 +213,7 @@
                         <div class="card-content">
 
                             <div class="table-responsive">
-                                <table class="table mb-0">
+                                <table class="table mb-0" id="example23">
                                     <thead class="thead-dark">
                                         <tr>
                                             <th>Team</th>
