--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/TopupList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/TopupList.cshtml
@@ -7,65 +7,79 @@
 
 @using (Html.BeginForm("PayoutLedger", "Wallet", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    <div class="row">
-        <div class="col-lg-12">
-            <br />
-        </div>
-        <!-- /.col-lg-12 -->
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Topup List
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    
-                    <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                        <thead>
-                            <tr>
-                                <th>Sr No.</th>
-                                <th>Name</th>
-                                <th>Upgradation Date</th>
-                                <th>Product Name</th>
-                                <th>Amount</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @if (Model != null)
-                            {
-                                if (Model.lsttopupreport != null)
-                                {
-                                    int i = 1;
-                                    foreach (var Item in Model.lsttopupreport)
-                                    {
-                                        <tr class="text-left">
-                                            <td>@i</td>
-                                            <td>@Item.Name</td>
-                                            <td>@Item.UpgradtionDate</td>
-                                            <td>@Item.ProductName</td>
-                                            <td>@Item.Amount</td>
-                                            <td>
-                                                <a href="/User/PrintTopup?invid=@Item.FK_InvestmentID" target="_blank" class="btn btn-sm btn-primary">Print</a>
-                                            </td>y
-                                        </tr>
-
-                                        i++;
-                                    }
-                                }
-                            }
-
-                        </tbody>
-                    </table>
-
-                </div>
-                <!-- /.panel-body -->
+    <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
             </div>
-            <!-- /.panel -->
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Top Up List</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+
+                                        <div class="table-responsive">
+                                            <table class="table mb-0" id="example23">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Sr No.</th>
+                                                        <th>Name</th>
+                                                        <th>Upgradation Date</th>
+                                                        <th>Product Name</th>
+                                                        <th>Amount</th>
+                                                        <th>Action</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @if (Model != null)
+                                                    {
+                                                        if (Model.lsttopupreport != null)
+                                                        {
+                                                            int i = 1;
+                                                            foreach (var Item in Model.lsttopupreport)
+                                                            {
+                                                                <tr class="text-left">
+                                                                    <td>@i</td>
+                                                                    <td>@Item.Name</td>
+                                                                    <td>@Item.UpgradtionDate</td>
+                                                                    <td>@Item.ProductName</td>
+                                                                    <td>@Item.Amount</td>
+                                                                    <td>
+                                                                        <a href="/User/PrintTopup?invid=@Item.FK_InvestmentID" target="_blank" class="btn btn-sm btn-primary">Print</a>
+                                                                    </td>y
+                                                                </tr>
+
+                                                                i++;
+                                                            }
+                                                        }
+                                                    }
+
+                                                </tbody>
+                                            </table>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
-        <!-- /.col-lg-12 -->
     </div>
 
 }
+<script src="../../AdminPanelCss/assets/vendors/jquery.js"></script>
