--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/ViewProfile.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/ViewProfile.cshtml
@@ -13,134 +13,152 @@
 <!-- /.row -->
 @using (Html.BeginForm("ViewProfile", "User", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
+    <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Edit Profile</span>
+                                        </a>
+                                    </li>
 
-    <span style="color:red"> @TempData["UpdateProfile"]</span>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    View Profile
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
-                </div>
-                <div class="panel-body">
 
-                    <fieldset>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>First Name <span style="color:red">*</span></label>
-                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.FirstName)
-                                    <br />
-                                    <label>Last Name</label>
-                                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.LastName)
-                                    <br />
-                                    <label>Mobile <span style="color:red">*</span></label>
-                                    @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.Mobile)
-                                </div>
-                            </div>
-                            @*<div class="col-lg-3">
-                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>First Name <span style="color:red">*</span></label>
+                                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.FirstName)
+                                                    <br />
+                                                    <label>Last Name</label>
+                                                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.LastName)
+                                                    <br />
+                                                    <label>Mobile <span style="color:red">*</span></label>
+                                                    @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.Mobile)
+                                                </div>
+                                            </div>
+                                            @*<div class="col-lg-3">
+                                                    <div class="form-group">
 
+                                                    </div>
+                                                </div>*@
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <img src="@Model.ProfilePicture" height="190" width="250" />
+                                                    <input type="file" name="fileProfilePicture" id="Image" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Sponsor Id</label>
+                                                    @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @disabled = "disabled" })
+                                                    @Html.ValidationMessageFor(m => m.SponsorId)
+                                                    @*<input type ="text"  value="@item1.SponsorId" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Sponsor Name</label>
+                                                    @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @disabled = "disabled" })
+                                                    @Html.ValidationMessageFor(m => m.SponsorName)
+                                                    @*<input type ="text"  value="@item1.SponsorName" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Email Id</label>
+                                                    @Html.TextBoxFor(m => m.EmailId, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.EmailId)
+                                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Joining Date</label>
+                                                    @Html.TextBoxFor(m => m.JoiningDate, new { @class = "form-control", @disabled = "disabled" })
+                                                    @Html.ValidationMessageFor(m => m.JoiningDate)
+                                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Account Number <span style="color:red">*</span></label>
+                                                    @Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.AccountNumber)
+                                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>IFSC <span style="color:red">*</span></label>
+                                                    @Html.TextBoxFor(m => m.IFSC, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.IFSC)
+                                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Bank Name <span style="color:red">*</span></label>
+                                                    @Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.BankName)
+                                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="form-group">
+                                                    <label>Bank Branch <span style="color:red">*</span></label>
+                                                    @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control" })
+                                                    @Html.ValidationMessageFor(m => m.BankBranch)
+                                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="form-group">
+                                                    <input type="submit" id="btnUpdate" class="btn btn-success pull-right" name="btnUpdate" value="Update" onclick="return editProfile()" />
+                                                    <input type="button" id="btnEdit" class="btn btn-primary pull-right" value="Edit" onclick="editProfile()" style="display:none" />
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>*@
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <img src="@Model.ProfilePicture" height="190" width="250" />
-                                    <input type="file" name="fileProfilePicture" id="Image" />
                                 </div>
                             </div>
                         </div>
-
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Sponsor Id</label>
-                                    @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @disabled = "disabled" })
-                                    @Html.ValidationMessageFor(m => m.SponsorId)
-                                    @*<input type ="text"  value="@item1.SponsorId" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Sponsor Name</label>
-                                    @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @disabled = "disabled" })
-                                    @Html.ValidationMessageFor(m => m.SponsorName)
-                                    @*<input type ="text"  value="@item1.SponsorName" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Email Id</label>
-                                    @Html.TextBoxFor(m => m.EmailId, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.EmailId)
-                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Joining Date</label>
-                                    @Html.TextBoxFor(m => m.JoiningDate, new { @class = "form-control", @disabled = "disabled" })
-                                    @Html.ValidationMessageFor(m => m.JoiningDate)
-                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Account Number <span style="color:red">*</span></label>
-                                    @Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.AccountNumber)
-                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>IFSC <span style="color:red">*</span></label>
-                                    @Html.TextBoxFor(m => m.IFSC, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.IFSC)
-                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Bank Name <span style="color:red">*</span></label>
-                                    @Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.BankName)
-                                    @*<input type ="text" id="txtEmail"  value="@item1.EmailId" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label>Bank Branch <span style="color:red">*</span></label>
-                                    @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(m => m.BankBranch)
-                                    @*<input type ="text"  value="@item1.JoiningDate" disabled="disabled" class="form-control" />*@
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="form-group">
-                                    <input type="submit" id="btnUpdate" class="btn btn-success pull-right" name="btnUpdate" value="Update" onclick="return editProfile()" />
-                                    <input type="button" id="btnEdit" class="btn btn-primary pull-right" value="Edit" onclick="editProfile()" style="display:none" />
-                                </div>
-                            </div>
-                        </div>
-                    </fieldset>
-                </div>
+                    </div>
+                </section>
             </div>
         </div>
     </div>
-
 }
+ 
+
 <style>
     .errortext {
         border: 1px solid red !important;
